# tech_challenge

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Tech_challenge.key  certificate.crt  docker-compose.dev.yml  docker-compose.yml  justfile  run.sh  rust-app-stress.sh
.github/workflows/: deploy.yml  unit-tests.yml
.postman/: collection.json
docker/: Dockerfile  Dockerfile.dev
kustomize/: app-deployment.yaml  app-hpa.yaml  app-svc.yaml  configmap.yaml  db-postgres.yaml  db-svc.yaml  mock-pagamentos-pod.yaml  mock-pagamentos-svc.yaml
migrations/: 0001_create_table.sql  0002_insert_basic.sql  Dockerfile  migration-script.sh
payment-mock/: Dockerfile  entrypoint.sh  gunicorn_config.py  pyproject.toml
payment-mock/payment-api/: manage.py
payment-mock/payment-api/apps/payment/: models.py  serializers.py  urls.py  views.py
payment-mock/payment-api/payment_api/: asgi.py  settings.py  urls.py  wsgi.py
src/: adapter.rs  adapters.rs  api.rs  base.rs  controllers.rs  domain.rs  entities.rs  external.rs  gateways.rs  lib.rs  main.rs  traits.rs
src/adapter/: api.rs  driven.rs
src/adapters/: jwt_authentication_adapter.rs  mercadopago_pagamento_webhook_adapter.rs  pagamento_webhook_adapter.rs
src/api/: config.rs  error_handling.rs  helpers.rs  routes.rs  server.rs
src/base/: assertion_concern.rs  domain_error.rs
src/controllers/: auth_controller.rs  cliente_controller.rs  pedido_controller.rs  produto_controller.rs  usuario_controller.rs
src/core/: application.rs  domain.rs
src/domain/: base.rs  entities.rs
src/entities/: cliente.rs  cpf.rs  ingredientes.rs  pagamento.rs  pedido.rs  produto.rs  usuario.rs
src/gateways/: aws_cognito_gateway.rs  cognito_cliente_gateway.rs  in_memory_cliente_gateway.rs  in_memory_cliente_repository.rs  in_memory_pagamento_gateway.rs  in_memory_pedido_gateway.rs  in_memory_pedido_repository.rs  in_memory_produto_gateway.rs  in_memory_produto_repository.rs  in_memory_usuario_gateway.rs  in_memory_usuario_repository.rs  postgres_cliente_gateway.rs  postgres_cliente_repository.rs  postgres_pagamento_gateway.rs  postgres_pedido_gateway.rs  postgres_pedido_repository.rs  postgres_produto_gateway.rs  postgres_produto_repository.rs  postgres_usuario_gateway.rs  postgres_usuario_repository.rs
src/traits/: authentication_adapter.rs  (+12 more)
(+112 files in other folders)
