[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_okapi = {version = "0.8.0-rc.3", features = ["swagger"]}
rocket = "0.5.0-rc.3"
serde = "1.0.192"
serde_json = "1.0.108"
schemars = "0.8.16"
