[package]
name = "tech_challenge"
homepage = "https://postech-5soat-grupo-25.github.io/"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket_okapi = {version = "0.8.0-rc.3", features = ["swagger"]}
rocket = "0.5.0-rc.3"
serde = "1.0.192"
serde_json = "1.0.108"
schemars = "0.8.16"
jsonwebtoken = "9"
regex = "1.5"
just = "1.16.0"
tokio-postgres = {version = "0.7.10", features = ["with-serde_json-1"]}
postgres-from-row = "0.5.2"
chrono = { version = "0.4.31", features = ["serde"] }
serde_with = "3.4.0"
bytes = "1.0"
mockall = "0.12.1"
tokio = "1.36.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "blocking"] }
aws-sdk-cognitoidentityprovider = "1.26.0"
aws-config = "1.3.0"

